# numword-georgia

./: .editorconfig  .gitignore  .pylintrc  README.md  numword_georgia.py  pyproject.toml  setup.py  taplo.toml  tea.yaml  test.py
.github/workflows/: release.yaml  test.yaml  tests.yaml
numword_georgia/: __init__.py  translators.py
src/numword_georgia/: __about__.py  __init__.py  translators.py
tests/: numword_georgia_test.py
