[tool.poetry]
name = "numword-georgia"
version = "0.2.0"
description = "Convert numbers to words in Georgian"
authors = ["Sergei Blinov <blinovsv@gmail.com>"]
readme = "README.md"
packages = [{ include = "numword_georgia" }]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.3"
black = { version = "^22.8.0", allow-prereleases = true }
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
